--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="container">
     {% if section.settings.show_newsletter %}
-      {% include 'newsletter-form' %}
+      {% render 'newsletter-form' %}
     {% endif %}
   </div>
 </footer>
