--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,25 +1,74 @@
-<header class="site-header">
+{% liquid
+  assign logo = section.settings.logo
+%}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    {% if section.settings.logo %}
-      <a href="/">
-        <img src="{{ section.settings.logo | img_url: '200x' }}" alt="{{ shop.name }}">
+    {% if logo != null %}
+      <a class="navbar-brand" href="/">
+        <img src="{{ logo | image_url: width: 200 }}" alt="{{ shop.name }}" width="200px" height="auto" loading="eager">
       </a>
-    {% else %}
-      <a href="/">{{ shop.name }}</a>
+    {%- else %}
+      <a class="navbar-brand" href="/">{{ shop.name }}</a>
     {% endif %}
-    
-    {% include 'navigation-main' %}
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
   </div>
-</header>
+</nav>
 
 {% schema %}
 {
-  "name": "Header",
+  "name": "header",
   "settings": [
     {
       "type": "image_picker",
       "id": "logo",
-      "label": "Logo"
+      "label": "Select a logo",
+      "info": "Logo should be: 200x200"
     }
   ]
 }
