--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,6 @@
 {% liquid
   assign logo = section.settings.logo
+  assign menu = section.settings.menu
 %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,9 +25,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+        {% for link in menu %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ link.url }}">{{ link.title }}</a>
+          </li>
+        {% endfor %}
+
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
@@ -69,6 +73,11 @@
       "id": "logo",
       "label": "Select a logo",
       "info": "Logo should be: 200x200"
+    },
+    {
+      "type": "link_list",
+      "id": "menu",
+      "label": "Select menu"
     }
   ]
 }
