--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -25,40 +25,44 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        {% for link in menu %}
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ link.url }}">{{ link.title }}</a>
+        {% for link in menu.links %}
+          <li class="nav-item {% if link.links.size >0 %} dropdown {% endif %}">
+            {% if link.links.size > 0 %}
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                {{ link.title }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                {% for childItem in link.links %}
+                  <li>
+                    <a class="dropdown-item" href="{{childItem.url}}">{{ childItem.title }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% else %}
+              <a class="nav-link {% if link.active %} active {% endif %}" aria-current="page" href="{{ link.url }}">
+                {{ link.title }}
+              </a>
+            {%- endif %}
           </li>
         {% endfor %}
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <form class="d-flex" action="{{ routes.search_url }}">
+        <input
+          type="text"
+          class="form-control me-2"
+          placeholder="Search"
+          aria-label="Search"
+          name="q"
+          value="{{ search.terms | escape }}"
+        >
+        <input type="submit" class="btn btn-outline-success" value="Search">
       </form>
     </div>
   </div>
@@ -78,6 +82,15 @@
       "type": "link_list",
       "id": "menu",
       "label": "Select menu"
+    },
+    {
+      "type": "header",
+      "content": "Search Bar"
+    },
+    {
+      "type": "checkbox",
+      "id": "enable_search_bar",
+      "label": "Enable search bar"
     }
   ]
 }
