--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -1,38 +1,32 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button
-      type="button"
-      data-bs-target="#carouselExampleCaptions"
-      data-bs-slide-to="0"
-      class="active"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    {% for block in section.blocks %}
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="{{ forloop.index0 }}"
+        class="{% if forloop.first %}active{% endif %}"
+        aria-current="{% if forloop.first %}true{% endif %}"
+        aria-label="Slide {{ forloop.index }}"
+      ></button>
+    {% endfor %}
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+    {% for block in section.blocks %}
+      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+        <img
+          src="{{ block.settings.image | image_url: '1920x1080' }}"
+          class="d-block w-100"
+          width="auto"
+          height="auto"
+          alt="{{ block.settings.alt_text }}"
+        >
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{ block.settings.title }}</h5>
+          <p>{{ block.settings.description }}</p>
+        </div>
       </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
+    {% endfor %}
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -43,11 +37,45 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
 {% schema %}
 {
-  "name": "Slide",
+  "name": "Carousel",
   "settings": [],
-  "blocks": [{ "type": "@theme" }, { "type": "@app" }]
+  "blocks": [
+    {
+      "type": "slide",
+      "name": "Slide",
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Slide Image"
+        },
+        {
+          "type": "text",
+          "id": "alt_text",
+          "label": "Alt Text",
+          "default": "Slide description"
+        },
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Slide Title",
+          "default": "Slide title"
+        },
+        {
+          "type": "textarea",
+          "id": "description",
+          "label": "Slide Description",
+          "default": "This is a description for the slide."
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Carousel"
+    }
+  ]
 }
 {% endschema %}
