--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -1,29 +1,30 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    {% for block in section.blocks %}
-      <button
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="{{ forloop.index0 }}"
-        class="{% if forloop.first %}active{% endif %}"
-        aria-current="{% if forloop.first %}true{% endif %}"
-        aria-label="Slide {{ forloop.index }}"
-      ></button>
-    {% endfor %}
+    <button
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    {% for block in section.blocks %}
-      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+    {% for item in section.blocks %}
+      <div class="carousel-item active">
         <img
-          src="{{ block.settings.image | image_url: '1920x1080' }}"
-          class="d-block w-100"
+          src="{{ item.settings.image_url | image_url: width:"original" }}"
           width="auto"
           height="auto"
-          alt="{{ block.settings.alt_text }}"
+          loading="lazy"
+          class="d-block w-100"
+          alt="..."
         >
         <div class="carousel-caption d-none d-md-block">
-          <h5>{{ block.settings.title }}</h5>
-          <p>{{ block.settings.description }}</p>
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
     {% endfor %}
@@ -37,45 +38,18 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
 {% schema %}
 {
-  "name": "Carousel",
+  "name": "Slider",
   "settings": [],
   "blocks": [
     {
       "type": "slide",
-      "name": "Slide",
-      "settings": [
-        {
-          "type": "image_picker",
-          "id": "image",
-          "label": "Slide Image"
-        },
-        {
-          "type": "text",
-          "id": "alt_text",
-          "label": "Alt Text",
-          "default": "Slide description"
-        },
-        {
-          "type": "text",
-          "id": "title",
-          "label": "Slide Title",
-          "default": "Slide title"
-        },
-        {
-          "type": "textarea",
-          "id": "description",
-          "label": "Slide Description",
-          "default": "This is a description for the slide."
-        }
-      ]
+      "name": "slide",
+      "settings": [{ "type": "image_picker", "id": "slide_img", "label": "Slider Image" }]
     }
   ],
-  "presets": [
-    {
-      "name": "Carousel"
-    }
-  ]
+  "presets": [{ "name": "Slider" }]
 }
 {% endschema %}
