--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -14,14 +14,16 @@
   <div class="carousel-inner">
     {% for item in section.blocks %}
       <div class="carousel-item active">
-        <img
-          src="{{ item.settings.image_url | image_url: width:"original" }}"
-          width="auto"
-          height="auto"
-          loading="lazy"
-          class="d-block w-100"
-          alt="..."
-        >
+        {% if item.settings.slide_img %}
+          <img
+            src="{{ item.settings.slide_img | image_url: width:1920 }}"
+            width="auto"
+            height="auto"
+            loading="lazy"
+            class="d-block w-100"
+            alt="Slide {{ forloop.index }}"
+          >
+        {% endif %}
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
