--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -1,19 +1,22 @@
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button
-      type="button"
-      data-bs-target="#carouselExampleCaptions"
-      data-bs-slide-to="0"
-      class="active"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    {% for item in section.blocks %}
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="{{ forloop.index }}"
+        {% if forloop.index == 1 %}
+          class="active"
+          aria-current="true"
+        {% endif %}
+
+        aria-label="Slide {{ forloop.index }}"
+      ></button>
+    {% endfor %}
   </div>
   <div class="carousel-inner">
     {% for item in section.blocks %}
-      <div class="carousel-item active">
+      <div class="carousel-item {% if forloop.index == 1 %} active {% endif %}">
         {% if item.settings.slide_img %}
           <img
             src="{{ item.settings.slide_img | image_url: width:1920 }}"
@@ -31,14 +34,16 @@
       </div>
     {% endfor %}
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+  {% if section.blocks.size > 0 %}
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  {% endif %}
 </div>
 
 {% schema %}
@@ -49,7 +54,11 @@
     {
       "type": "slide",
       "name": "slide",
-      "settings": [{ "type": "image_picker", "id": "slide_img", "label": "Slider Image" }]
+      "settings": [
+        { "type": "image_picker", "id": "slide_img", "label": "Slider Image" },
+        { "type": "text", "id": "slide_heading", "label": "Slide title", "default": "Slide Title" },
+        { "type": "textarea", "id": "slide_description", "label": "Slide description", "default": "Slide Description" }
+      ]
     }
   ],
   "presets": [{ "name": "Slider" }]
