--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -56,6 +56,7 @@
       "name": "slide",
       "settings": [
         { "type": "image_picker", "id": "slide_img", "label": "Slider Image" },
+        { "type": "header", "content": "Slider Content" },
         { "type": "text", "id": "slide_heading", "label": "Slide title", "default": "Slide Title" },
         { "type": "textarea", "id": "slide_description", "label": "Slide description", "default": "Slide Description" }
       ]
