--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -4,7 +4,7 @@
       <button
         type="button"
         data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="{{ forloop.index }}"
+        data-bs-slide-to="{{ forloop.index0 }}"
         {% if forloop.index == 1 %}
           class="active"
           aria-current="true"
