--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -28,8 +28,8 @@
           >
         {% endif %}
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>{{ item.settings.slide_heading }}</h5>
+          <div>{{ item.settings.slide_description }}</div>
         </div>
       </div>
     {% endfor %}
@@ -58,7 +58,12 @@
         { "type": "image_picker", "id": "slide_img", "label": "Slider Image" },
         { "type": "header", "content": "Slider Content" },
         { "type": "text", "id": "slide_heading", "label": "Slide title", "default": "Slide Title" },
-        { "type": "textarea", "id": "slide_description", "label": "Slide description", "default": "Slide Description" }
+        {
+          "type": "richtext",
+          "id": "slide_description",
+          "label": "Slide description",
+          "default": "<p>Some representative placeholder content for the first slide.</p>"
+        }
       ]
     }
   ],
