--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -30,6 +30,11 @@
         <div class="carousel-caption d-none d-md-block">
           <h5>{{ item.settings.slide_heading }}</h5>
           <div>{{ item.settings.slide_description }}</div>
+          {% if item.settings.btn_title != blank %}
+            <div class="actions">
+              <a class="btn btn-primary" href="{{ item.settings.btn_url }}"> {{ item.settings.btn_title }} </a>
+            </div>
+          {% endif %}
         </div>
       </div>
     {% endfor %}
@@ -63,6 +68,17 @@
           "id": "slide_description",
           "label": "Slide description",
           "default": "<p>Some representative placeholder content for the first slide.</p>"
+        },
+        {
+          "type": "text",
+          "id": "btn_title",
+          "label": "Button title",
+          "default": "Shop now"
+        },
+        {
+          "type": "url",
+          "id": "btn_url",
+          "label": "Button url"
         }
       ]
     }
