--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -26,7 +26,7 @@
       <div
         class="carousel-item {% if forloop.index == 1 %} active {% endif %}"
 
-        data-bs-interval="{% if section.settings.auto_slide %}0 {% else %}{{section.settings.speed}}{% endif %}"
+        data-bs-interval="{% if section.settings.auto_slide %}{{section.settings.speed}}{% else %}0{% endif %}"
       >
         {% if item.settings.slide_img %}
           <img
