--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,12 +1,35 @@
-<div class="container">
-  <div class="section-heading">
-    <h2>Featured collection</h2>
+{% liquid
+  assign collection = section.settings.collection
+%}
+
+<div class="container mt-5 mb-5">
+  <div class="section-heading mb-4">
+    <h2>
+      {% if section.settings.title != blank %}
+        {{ section.settings.title }}
+      {% else %}
+        {{ collection.title }}
+      {% endif %}
+    </h2>
   </div>
   <div class="row">
-    {% for product in section.settings.collection.products %}
+    {% for product in collection.products %}
       <div class="col-md-4">
-        <div class="product-card">
-          <h2>{{ product.title }}</h2>
+        <div class="card p-2">
+          <img
+            src="{{ product.featured_image | image_url: width:500 }}"
+            height="auto"
+            width="auto"
+            loading="lazy"
+            alt="{{ product.title }}"
+          >
+          <div class="product-info">
+            <h3>{{ product.title }}</h3>
+            <p>
+              <strong>{{ product.price | money }}</strong>
+            </p>
+            <div class="btn btn-primary">Add To Cart</div>
+          </div>
         </div>
       </div>
     {% endfor %}
@@ -17,6 +40,11 @@
 {
   "name": "Featured collection",
   "settings": [
+    {
+      "type": "text",
+      "id": "title",
+      "label": "Section title"
+    },
     {
       "type": "collection",
       "id": "collection",
