--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -96,9 +96,22 @@
       "type": "slide",
       "name": "slide",
       "settings": [
-        { "type": "image_picker", "id": "slide_img", "label": "Slider Image" },
-        { "type": "header", "content": "Slider Content" },
-        { "type": "text", "id": "slide_heading", "label": "Slide title", "default": "Slide Title" },
+        {
+          "type": "image_picker",
+          "id": "slide_img",
+          "label": "Slider Image",
+          "info": "Please maintain same image ration for better design."
+        },
+        {
+          "type": "header",
+          "content": "Slider Content"
+        },
+        {
+          "type": "text",
+          "id": "slide_heading",
+          "label": "Slide title",
+          "default": "Slide Title"
+        },
         {
           "type": "richtext",
           "id": "slide_description",
